--- a/DotMapper/Content/Site.css
+++ b/DotMapper/Content/Site.css
@@ -4,10 +4,13 @@
   background: none; }
 
 .full {
-  background: url("/Images/nature-218481.jpg") no-repeat center center fixed;
+  background: #808080;
   background-size: cover; }
 
 .map {
-  height: 100%; }
+  height: 500px; }
+
+#attrForms {
+  margin: 5px; }
 
 /*# sourceMappingURL=Site.css.map */
