--- a/DotMapper/Views/Shared/_Layout.cshtml
+++ b/DotMapper/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="//js.arcgis.com/3.9/js/esri/css/esri.css">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    <link href="~/Content/Todo.min.css" rel="stylesheet" />
 </head>
 <body>
     <nav class="navbar navbar-fixed-bottom navbar-inverse" role="navigation">
@@ -19,7 +19,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.php">Start Bootstrap</a>
+                <a class="navbar-brand" href="#/">Home</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
