Started to implement loading feature.

--- a/DotMapper/Templates/Mapper.html
+++ b/DotMapper/Templates/Mapper.html
@@ -1,11 +1,8 @@
 ﻿<section class="col-md-12 content">
     <article class="col-md-3">
         <button id="maker" class="btn btn-block btn-primary" data-toggle="modal" data-target="#myModal">Make A Map</button>
-        <button id="loader" class="btn btn-block btn-primary">Load A Map</button>
-        
-        <form id="attrForms">
-
-        </form>
+        <!--<button id="loader" class="btn btn-block btn-primary" ng-click="LoadMaps()">Load A Map</button>-->
+        <form id="attrForms"></form>
         <button class="btn btn-block btn-success" id="SavePointBtn" ng-click="SavePntBtn()">Save this Point</button>
         <button class="btn btn-block btn-primary" id="SaveMap" disabled>Save Map</button>
     </article>
