--- a/DotMapper/Templates/Home.html
+++ b/DotMapper/Templates/Home.html
@@ -2,8 +2,8 @@
     <div class="row">
         <div class="col-lg-6 col-sm-12">
             <h1>The Big Picture</h1>
-            <p>Here's a spot for some awesome intro text. Check out the fixed nav at the bottom!</p>
-            <p>Set the background image in the CSS, pair it with some cool fonts, and you will have a rockin' start to a cool portfolio.</p>
+            <p>Eventually this is going to be a portfolio</p>
+            <p>It will contain a location based todo application and a customizable point mapper.</p>
         </div>
     </div>
 </div>
